# tag-sensor

./: .dockerignore  .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DOCS.md  Dockerfile  LICENSE  README.md  bandit.yaml  build.yaml  config.yaml  entrypoint.sh  example-config.yaml  mkdocs.yaml  pylintrc  pyproject.toml  ruff.toml  tag-sensor.schema.json  test-config.yaml
.github/: CODEOWNERS  dependabot.yaml
.github/workflows/: ci.yaml
docs/: cameras.md  configuration.md  index.md  interfaces.md  making-markers.md  markers.md  rendering.md
scripts/: develop  lint  setup  test  update-schema  update-versions
src/tag_sensor/: __init__.py  __main__.py  base.py  camera.py  cli_utils.py  config.py  detection.py  emitter.py  family.py  frame.py  manager.py  marker.py  model.py  renderer.py  utils.py  version.py
src/tag_sensor/calibration/: __init__.py  calibrator.py  capture.py  config.py  record.py
src/tag_sensor/interfaces/: __init__.py  base.py  dummy.py  homeassistant.py  http.py  script.py
src/tag_sensor/interfaces/reolink/: __init__.py  base.py  camera_interface.py  channels.py  nvr_interface.py  utils.py
src/tag_sensor/server/: application.py  config.py  dependencies.py  metrics.py  mqtt.py  utils.py
src/tag_sensor/server/static/: styles.css
src/tag_sensor/server/templates/: camera.html  header.html  index.html  macros.html  marker.html
tests/: conftest.py  test_calibration.py  test_camera.py  test_cli.py  test_config.py  test_detection.py  test_family.py  test_frame.py  test_interfaces.py  test_marker.py  test_reolink_nvr_interface.py  test_server.py  test_utils.py  utils.py
tests/camera-data/bins_camera/: calibration.yaml
translations/: en.yaml
utils/: generate-reolink-nvr-config
