[project]
name = "tag-sensor"
version = "1.0.0"
description = ""
authors = [
  { name = "Jason Kohles", email = "email@jasonkohles.com" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
packages = [
  { include = "tag_sensor", from = "src" },
]
dependencies = [
    "aiomqtt>=2.3.0",
    "asyncer>=0.0.8",
    "fastapi[standard]>=0.115.6",
    "httpx>=0.28.1",
    "jinja2>=3.1.5",
    "opencv-contrib-python-headless>=4.10.0.84",
    "paho-mqtt>=2.1.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "pydantic-settings>=2.7.0",
    "rich>=13.9.4",
    "solidpython2>=2.1.0",
    "structlog>=24.4.0",
    "typer>=0.15.1",
]

[project.scripts]
tag-sensor = "tag_sensor.__main__:app"

[tool.hatch.build.targets.sdist]
packages = ["src/tag_sensor"]
exclude = [".gitignore"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
# ignore_missing_imports = true
python_version = '3.11'

follow_imports = 'silent'
warn_unused_ignores = false
warn_redundant_casts = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
disallow_any_generics = true
no_implicit_reexport = true
disallow_untyped_defs = false # for strict mypy

disable_error_code = [
  'type-abstract', # https://github.com/python/mypy/issues/4717
]

[tool.pydantic-mypy]
init_forbid_extra = false
init_typed = true
warn_required_dynamic_aliases = true

#[[tool.mypy.overrides]]
#module = "tests/async.*"
#ignore_errors = true

[tool.pyright]
pythonVersion = "3.13"
reportMissingImports = false
reportTypedDictNotRequiredAccess = false
reportCallInDefaultInitializer = true
reportOptionalSubscript = false
reportUnboundVariable = false
strictParameterNoneValue = false
reportIncompatibleMethodOverride = false

[tool.black]
line-length = 80
target-version = ['py313']
exclude = "generated"

[tool.isort]
profile = "black"
known_first_party = [ "tag_sensor", "tests" ]
force_sort_within_sections = true
forced_separate = [ "tests" ]
combine_as_imports = true
line_length = 70
wrap_length = 70
include_trailing_comma = true
add_imports = [ 'from __future__ import annotations' ]
append_only = true
#indent = "    "
#sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
#default_section = THIRDPARTY

multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true
#forced_separate = tests

#[tool.interrogate]
#fail-under = 100
#exclude    = ["dist"]
#
#[tool.tox]
#legacy_tox_ini = """
#[tox]
#    isolated_build = true
#    envlist = py, style
#
#
#    [testenv]
#    deps =
#        pytest
#        pytest-cov
#    commands =
#        {envpython} -m pytest --cov=data_repos --cov-fail-under=100 --cov-report=t#erm-missing
#
#
#    [testenv:style]
#    skip_install = true
#    deps =
#        black
#        ruff
#        interrogate
#        isort
#    commands =
#        {envpython} -m black --check --quiet data_repos/ tests/
#        {envpython} -m ruff check data_repos/ tests/
#        {envpython} -m interrogate --quiet --config=pyproject.toml
#        {envpython} -m isort --check data_repos/ tests/
#"""
#

#[project.urls]
#Homepage      = "https://realpython.com/python-namespace-package/"
#"Source Code" = "https://github.com/realpython/data-repos/"
#Tutorial      = "https://realpython.com/python-namespace-package/"
#
#[project.optional-dependencies]
#dev  = ["black", "bump2version", "ruff", "interrogate", "isort"]
#test = ["black", "ruff", "interrogate", "pytest", "pytest-cov", "tox"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",

    "if TYPE_CHECKING:",
    "pragma: no cover",
]
skip_covered = true
# ignore_errors = true

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "devtools>=0.12.2",
    "griffe-pydantic>=1.1.0",
    "hatch>=1.14.0",
    "hatchling>=1.27.0",
    "markdown-include>=0.8.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-material>=9.5.49",
    "mkdocs-section-index>=0.3.9",
    "mkdocstrings[python]>=0.27.0",
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
    "pylint>=3.3.3",
    "pyright>=1.1.391",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pytest-httpx>=0.35.0",
    "pytest-mock>=3.14.0",
    "pytest-testmon>=2.1.3",
    "pytest-watch>=4.2.0",
    "ruff>=0.8.4",
    "types-pyyaml>=6.0.12.20241230",
]
